[package]
name = "track"
version = "0.1.2"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
indicatif = "0.12.0"
twitter-stream = "0.8.0"
